--- a/src/components/ProductCard.css
+++ b/src/components/ProductCard.css
@@ -45,3 +45,11 @@
   .productCard button:hover{
     background-color: #103f80;
   }
+
+  .productCard .remove{
+    background-color: #590505;
+  }
+
+  .productCard .remove:hover{
+    background-color: #590505;
+  }
